Get Binary Image
Aggiunta la funzionalità per recuperare l'immagine binaria a partire dal post id.
Modifica all'API per includere questa nuova funzionalità.
Aggiunte le funzioni di controllo presenza user e post.
